Update vercel file

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,3 @@
 {
-  "builds": [
-    {
-      "src": "dist/main.js",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["node_modules/swagger-ui-dist/**"]
-      }
-    }
-  ]
+  "version": 2
 }
