--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,9 @@
 {
-  "version": 2
+  "version": 2.1,
+  "buildCommand": "npm run build",
+  "functions": {
+    "dist/main.js": {
+      "includeFiles": "node_modules/swagger-ui-dist/**"
+    }
+  }
 }
