Update vercel version

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-  "version": 2,
-  "buildCommand": "npm run build",
-  "functions": {
-    "dist/main.js": {
-      "includeFiles": "node_modules/swagger-ui-dist/**"
-    }
-  }
+  "version": 2
 }
